# RedSubContinent

./: .env.example  .gitignore  METHODS.md  README.md  docker-compose.yml  start.bat  stop.bat  tmp_non_ascii.py  tmp_non_ascii_api.py
api/: alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: __init__.py  config.py  database.py  main.py
api/app/models/: __init__.py  conflict.py
api/app/routers/: __init__.py  actors.py  conflicts.py  stats.py
api/app/schemas/: __init__.py  conflict.py
api/app/services/: __init__.py  conflict_service.py
api/tests/: test_conflicts.py
etl/: pyproject.toml  requirements.txt
etl/scripts/: run_scrape.py  seed_database.py
etl/src/: __init__.py  pipeline.py
etl/src/cleaners/: __init__.py  casualties.py  dates.py  geocoding.py
etl/src/models/: __init__.py  schemas.py
etl/src/scrapers/: __init__.py  base.py  wikipedia.py
infra/docker/observability/: docker-compose.observability.yml  loki-config.yaml  promtail-config.yaml
infra/docker/postgres/: init.sql
web/: .env.local.example  .eslintrc.json  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/src/app/: layout.tsx  page.tsx
web/src/app/data/: page.tsx
web/src/components/: ImageWithFallback.tsx  KeyMetrics.tsx  MapExplorer.tsx  StatsChart.test.tsx  StatsChart.tsx  TimelineChart.tsx
web/src/lib/: api.ts  monitoring.ts  useErrorReporter.ts  utils.ts
web/src/styles/: globals.css
web/src/types/: index.ts
(+19 files in other folders)
